--- a/css/events.css
+++ b/css/events.css
@@ -3,7 +3,7 @@ t@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&famil
 
 * {
     margin: 0;
-    /*    padding: 0;*/
+    padding: 0;
     box-sizing: border-box;
     list-style-type: none;
 }
@@ -37,14 +37,22 @@ h1 {
     color: white;
     font-family: var(--secondary-font);
     font-weight: 500;
+    font-size: 3vw;
 }
 
-h2,
-h5 {
+h2 {
     font-family: var(--secondary-font);
     color: var(--color-2);
     padding-bottom: 3vw;
     font-size: 3vw;
+}
+
+h5 {
+    font-family: var(--secondary-font);
+    color: var(--color-2);
+    font-size: 3vw;
+    padding: 0;
+    margin: 0;
 }
 
 h3 {
@@ -82,12 +90,18 @@ nav li {
     padding-top: 2vw;
     padding-bottom: 1vw;
     color: var(--color-4);
+    border-bottom: 2px solid var(--color-2)
 
 }
 
 nav a {
     text-decoration: none;
     color: var(--color-4);
+}
+
+nav li:hover {
+    transition: 0.5s;
+    border-bottom: 2px solid white
 }
 
 
@@ -125,8 +139,8 @@ nav a {
 .banner_events {
     background-image: url(../images/photos/events/bgimage_events.png);
     background-size: contain;
-    height: 48vw;
-    width: 100vw;
+    height: 46vw;
+    width: 100%;
     margin-bottom: 4vw;
     display: flex;
     justify-content: center;
@@ -136,8 +150,8 @@ nav a {
 .banner_publicevents {
     background-image: url(../images/photos/events/bgimage_eventspublic.png);
     background-size: contain;
-    height: 48vw;
-    width: 100vw;
+    height: 46vw;
+    width: 100%;
     margin-bottom: 4vw;
     display: flex;
     justify-content: center;
@@ -147,8 +161,8 @@ nav a {
 .banner_privateevents {
     background-image: url(../images/photos/events/bgimage_eventsprivate.png);
     background-size: contain;
-    height: 48vw;
-    width: 100vw;
+    height: 46vw;
+    width: 100%;
     margin-bottom: 4vw;
     display: flex;
     justify-content: center;
@@ -211,6 +225,10 @@ button {
     margin-top: 1.5vw;
 }
 
+button p {
+    margin: 0
+}
+
 button:hover {
     opacity: 0.8
 }
@@ -240,7 +258,7 @@ button:hover {
 }
 
 .icon2 {
-        display: flex;
+    display: flex;
     height: 4vw;
     width: auto;
     margin: 0 auto;
@@ -360,22 +378,27 @@ section {
 }
 
 .privateeventimage1 {
+    /*
     background-image: url(../images/photos/events/ouroffer.png);
     background-size: cover;
     width: auto;
     height: 30rem;
+
+*/
+    height: auto;
+    width: 48vw;
+    margin-left: 4vw;
+
 }
 
 .privateeventimage2 {
-    background-image: url(../images/photos/events/tasting.png);
-    background-size: cover;
-    width: auto;
-    height: 30rem;
+    height: auto;
+    width: 48vw;
+    margin-right: 4vw;
 }
 
 .event {
     background-color: var(--color-3);
-    margin: 8vw 0;
 }
 
 .eventslink {
@@ -397,31 +420,41 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
+    margin-top: 2vw;
 }
 
-li {
-    display: list-item;
-    list-style: disc;
-    line-height: 1.5rem
+.textbox ul li {
+    list-style: disc
+}
+
+.textbox ul li p {
+    /*    display: list-item;*/
+    /*    list-style: disc;*/
+    /*    line-height: 1.5rem*/
+    margin: 0;
+}
+
+.test_image_actual {
+    width: 12vw;
 }
 
 .quotemark_grey {
     background-image: url(../images/icons/events/quotemark_grey.png);
     background-size: cover;
-    width: 12vw;
-    height: 20vw;
+    width: 10vw;
+    height: 14vw;
     position: relative;
-    bottom: -6vw;
+    bottom: -3vw;
     z-index: 1;
 }
 
 .quotemark_red {
     background-image: url(../images/icons/events/quotemark_red.png);
     background-size: cover;
-    width: 12vw;
-    height: 20vw;
+    width: 10vw;
+    height: 14vw;
     position: relative;
-    bottom: -6vw;
+    bottom: -3vw;
     z-index: 1;
 }
 
@@ -472,7 +505,6 @@ li {
 
 .wrapper_contactus {
     display: grid;
-    margin-top: 3vw;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1vw 3vw;
     grid-template-rows: 1fr 1fr 2fr 0.7fr;
@@ -531,6 +563,16 @@ li {
 .button_send {
     flex-grow: 1;
     padding: 0;
+    background-color: var(--color-5);
+    border: none;
+    border-radius: 0.3vw;
+    color: var(--color-4);
+    font-family: var(--primary-font);
+    font-weight: 300;
+    opacity: 1;
+    transition: 0.3s;
+    cursor: pointer;
+    font-size: 1.3vw;
 }
 
 footer {
@@ -544,16 +586,32 @@ footer p {
 
 .footergrid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 7vw;
-    margin-top: 6vw;
+    grid-template-columns: 1fr 1fr 2fr;
+    grid-column-gap: 4vw;
+    margin-top: 4vw;
     color: white;
     font-family: var(--primary-font);
-    margin-left: 5vw;
-    margin-right: 5vw;
-    font-size: 1vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    font-size: 1.5vw;
     font-weight: 300;
     line-height: 1.6;
+
+}
+
+.partnerlogo {
+    height: 3vw;
+}
+
+
+a.footerlink {
+    text-decoration: none;
+    color: white;
+}
+
+a.footerlink:visited {
+    text-decoration: none;
+    color: white;
 }
 
 
@@ -597,9 +655,6 @@ footer p {
     padding-bottom: 2vw;
 }
 
-
-
-//--------------------------
 .about_us {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -608,9 +663,325 @@ footer p {
     grid-gap: 4vw;
 }
 
+display: flex;
+flex-direction: column;
+align-items: stretch;
+justify-content: center;
+width: 90%;
+margin-left: 5vw;
+
 .about_us_img {
     height: auto;
     width: 40vw;
     margin-left: 4vw;
 
+}
+
+
+/* Media Queries */
+
+@media only screen and (max-width: 500px) {
+
+
+    .banner_events,
+    .banner_publicevents,
+    .banner_privateevents {
+        display: none;
+
+    }
+
+    h3 {
+        font-size: 2.5vw;
+    }
+
+    h2,
+    h5 {
+        font-size: 4vw;
+        margin-top: 1vw;
+    }
+
+    p {
+        font-size: 3vw;
+    }
+
+    header nav {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+
+    header nav ul {
+        display: grid;
+        grid-template-columns: 1fr;
+        font-size: 2.3vw;
+        margin-bottom: 1vw;
+        padding: 0px;
+    }
+
+    nav ul li {
+        /*        padding: 0;*/
+    }
+
+
+    .logo {
+        display: flex;
+        width: 50%;
+        height: auto;
+        margin: 0 40% 0% 25%;
+    }
+
+    .cart {
+        width: 5%;
+        height: auto;
+        padding-top: 1vw;
+        position: relative;
+        left: 47%;
+    }
+
+    .why_moldova {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        flex-direction: column-reverse;
+    }
+
+    .moldova_map {
+        height: auto;
+        width: 80vw;
+        margin-left: 10vw;
+        margin-top: 4vw;
+
+    }
+
+    .why_moldova_text {
+        text-align: center;
+        display: flex;
+        margin-top: 5vw;
+    }
+
+    .intro {
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+
+    .icon_des {
+        display: none;
+    }
+
+    .icon {
+        width: 10vw;
+        text-align: center;
+    }
+
+    .wrapper {
+        grid-gap: 1rem;
+    }
+
+    .icon_title {
+        font-size: 2vw;
+    }
+
+    .about_us {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        flex-direction: column-reverse;
+        margin-top: 8vw;
+    }
+
+    .about_us_img {
+        height: auto;
+        width: 80vw;
+        margin: 0;
+        margin-top: 6vw;
+        margin-left: 5vw;
+    }
+
+    .about_us_text {
+        text-align: center;
+    }
+
+    button {
+        align-self: center;
+        font-size: 2.3vw;
+        width: 30vw;
+        padding: 2.5vw;
+        margin-top: 1vw;
+    }
+
+    .our_treasure_img {
+        height: auto;
+        width: 80vw;
+        margin: 0;
+        margin-top: 6vw;
+        margin-left: 5vw;
+    }
+
+    .eventimages {
+        display: flex;
+        flex-wrap: nowrap;
+        padding-top: 2vw;
+    }
+
+    .publiceventsimg {
+        width: 10rem;
+        height: 10rem;
+    }
+
+    .privateeventsimg {
+        width: 10rem;
+        height: 10rem;
+    }
+
+    .eventimages button {
+        font-size: 2vw;
+    }
+
+    .eventimages button p {
+        margin: 0;
+    }
+
+
+    .our_partners {
+        display: none;
+    }
+
+    .footergrid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        font-weight: 300;
+        line-height: 1.6;
+        margin-bottom: 6vw;
+    }
+
+    .footergrid p {
+        font-size: 2vw;
+    }
+
+    .logowhite {
+        width: 30vw;
+    }
+
+    .footer_3 {
+        display: none;
+    }
+
+    .ftitle_style {
+        font-size: 4vw;
+    }
+
+    .copyright {
+        font-size: 1.5vw;
+    }
+
+    .test_image_actual {
+        width: 18vw;
+    }
+
+    .wrapper_testimonials {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .wrapper_offer {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 0vw;
+        padding: 0
+    }
+
+    .test_card_white {
+        width: 70%;
+    }
+
+    .test_card_grey {
+        width: 90%;
+    }
+
+    .test_des {
+        font-size: 2.5vw;
+    }
+
+    .left,
+    .right {
+        display: none;
+    }
+
+    .middle {
+        margin-top: -5vw;
+        margin-bottom: -5vw;
+    }
+
+    .wrapper_contactus {
+        grid-template-rows: 1fr 1fr 2fr 0.5fr;
+    }
+
+    .wrapper_contactus p {
+        font-size: 2.6vw;
+    }
+
+    .button_send {
+        font-size: 2vw;
+    }
+
+    .center {
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+
+
+    .wrapper2 {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        flex-direction: column-reverse;
+        margin-top: 8vw;
+        text-align: center;
+        padding-top: 3vw;
+
+    }
+
+    .privateeventimage1 {
+        width: 60vw;
+        height: auto;
+        margin: 0;
+        padding: 0;
+    }
+
+    .privateeventimage2 {
+        width: 60vw;
+        height: auto;
+        margin: 0;
+        padding: 0;
+    }
+
+    .textbox {
+        text-align: center;
+        display: flex;
+        margin-top: 5vw;
+        margin: 0;
+        padding: 0;
+    }
+
+    .textbox ul {
+        padding-left: 2vw;
+    }
+
+    .grey p{
+        font-size: 2.5vw;
+        line-height: 3vw
+    }
+
+    .event2image, .event1image {
+        display: none;
+    }
+
+    .publicwinetasting {
+        margin-top: 4vw;
+        align-items: center;
+    }
+
+    .publicwinetasting p {
+        font-size: 2.7vw;
+    }
 }
