--- a/css/wineshop.css
+++ b/css/wineshop.css
@@ -61,12 +61,18 @@ nav li {
     padding-top: 2vw;
     padding-bottom: 1vw;
     color: var(--color-4);
+    border-bottom: 2px solid var(--color-2)
 
 }
 
 nav a {
     text-decoration: none;
     color: var(--color-4);
+}
+
+nav li:hover {
+    transition: 0.5s;
+    border-bottom: 2px solid white
 }
 
 
@@ -83,6 +89,7 @@ nav a {
     padding-top: 1vw;
     cursor: pointer;
 }
+
 /* TEXT STYLING */
 
 .product_shortdescription {
@@ -91,30 +98,49 @@ nav a {
 }
 
 
-h1{
+p {
+    font-family: var(--primary-font);
+    font-weight: 300;
+    font-size: 1.5vw;
+    line-height: 1.9
+}
+
+
+h1 {
     align-self: center;
     color: white;
     font-family: var(--secondary-font);
     font-weight: 500;
+    font-size: 3vw;
 }
 
 h2 {
     font-family: var(--secondary-font);
+    color: var(--color-2);
     padding-bottom: 3vw;
     font-size: 3vw;
 }
 
+h5 {
+    font-family: var(--secondary-font);
+    color: var(--color-2);
+    font-size: 3vw;
+    padding: 0;
+    margin: 0;
+}
+
 h3 {
     font-family: var(--primary-font);
+    font-size: 1.4vw;
     text-transform: uppercase;
     color: #B2B2B2;
     font-weight: 300;
 }
 
+
 .intro {
     text-align: center;
-    padding-bottom: 5vw;
-    padding: 0vw 8vw 5vw 8vw;
+    padding: 5vw 8vw 5vw 8vw;
 }
 
 h4 {
@@ -148,17 +174,16 @@ h5 {
 .bannerwineshop {
     background-image: url(../images/photos/wineshop/bgimage_wineshop.png);
     background-size: contain;
-    height: 48vw;
-    width: 100vw;
+    height: 44vw;
+    width: 100%;
     margin-bottom: 4vw;
     display: flex;
     justify-content: center;
-    background-repeat: no-repeat;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
+.product_image {
+    width: auto;
+    height: 20vw;
     padding: 0vw 4vw;
 }
 
@@ -242,6 +267,12 @@ main {
     border: solid .005vw var(--color-3);
 }
 
+.subpage_link {
+    display: flex;
+     flex-direction: column;
+     align-items: center;
+}
+
 .product_text {
     display: flex;
     flex-direction: column;
@@ -271,4 +302,167 @@ a.subpage_link {
 
 .productlist:hover {
     background-color: var(--color-3);
+}
+
+footer {
+    background-color: var(--color-2);
+    padding-top: 0.1vw;
+}
+
+footer p {
+    font-size: 1.1vw;
+}
+
+.footergrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+    grid-column-gap: 4vw;
+    margin-top: 4vw;
+    color: white;
+    font-family: var(--primary-font);
+    margin-left: 2vw;
+    margin-right: 2vw;
+    font-size: 1.5vw;
+    font-weight: 300;
+    line-height: 1.6;
+
+}
+
+.partnerlogo {
+    height: 3vw;
+}
+
+
+a.footerlink {
+    text-decoration: none;
+    color: white;
+}
+
+a.footerlink:visited {
+    text-decoration: none;
+    color: white;
+}
+
+
+.logowhite {
+    height: auto;
+    width: 13vw;
+}
+
+.ftitle_style {
+    font-family: var(--primary-font);
+    font-weight: 600;
+    color: var(--color-5);
+    margin-bottom: 0.4vw;
+    font-size: 1.2vw;
+}
+
+.stay_connected button {
+    width: 19vw;
+    border: none;
+    padding: 1vw;
+    border-radius: 0.3vw;
+    background-color: var(--color-5);
+    color: var(--color-4);
+    font-family: var(--primary-font);
+    font-weight: 300;
+    opacity: 1;
+    transition: 0.3s;
+    cursor: pointer;
+    margin-top: 1vw;
+}
+
+
+.copyright {
+    text-align: center;
+    margin-top: 3vw;
+    font-family: var(--primary-font);
+    font-size: 1vw;
+    font-weight: 300;
+    color: white;
+    background-color: var(--color-2);
+    padding-bottom: 2vw;
+}
+
+
+/* Media Queries */
+
+@media only screen and (max-width: 500px) {
+
+.bannerwineshop {
+        display: none;
+    }
+
+    h3 {
+        font-size: 2.5vw;
+    }
+
+    h2{
+        font-size: 4vw;
+        margin-top: 1vw;
+    }
+
+    h5 {
+        font-size: 2vw;
+
+    }
+
+    h4 {
+        font-size: 3vw;
+    }
+
+    p {
+        font-size: 2vw;
+    }
+
+    .product_price {
+        font-size: 3.5vw;
+    }
+
+    header nav {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+
+    header nav ul {
+        display: grid;
+        grid-template-columns: 1fr;
+        font-size: 2.3vw;
+        margin-bottom: 1vw;
+        padding: 0px;
+    }
+
+    nav ul li {
+        /*        padding: 0;*/
+    }
+
+
+    .logo {
+        display: flex;
+        width: 50%;
+        height: auto;
+        margin: 0 40% 0% 25%;
+    }
+
+    .cart {
+        width: 5%;
+        height: auto;
+        padding-top: 1vw;
+        position: relative;
+        left: 47%;
+    }
+
+
+    main {
+    grid-template-columns: repeat(auto-fill, minmax(120px, 2fr));
+    /*grid-gap: 10px;*/
+    margin-bottom: 40px;
+    padding: 8vw;
+}
+
+
+
+
+
 }
